Fix z-index

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -163,7 +163,7 @@ body.home header{
 	position: fixed;
 	right: 1rem;
 	bottom: 1rem;
-	z-index: 10;
+	z-index: 30;
 	transition: .2s ease-in-out;
 
 	&:hover{
